--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,9 @@ block content
   br
   div(id = "target") 
     b Display
-  
+    br
+    br
+  a(href = '/balls') balls page.
   script.  
    var client_count=0;
      function update() {
