--- a/views/costumedelete.pug
+++ b/views/costumedelete.pug
@@ -14,16 +14,16 @@ block content
     script let actionid = "#{actionid}" 
     div 
       div.row 
-        div(class='costumeAttr mr-3') Costume ID is: 
+        div(class='costumeblue mr-3') Costume ID is: 
         div #{costumeid} 
       div.row 
-        div(class='costumeAttr mr-3') Costume Type is: 
+        div(class='costumegrey mr-3') Costume Type is: 
         div #{costume_type} 
       div.row 
-        div(class='costumeAttr mr-3') Costume Size is: 
+        div(class='costumeyellow mr-3') Costume Size is: 
         div #{costumesize} 
       div.row 
-        div(class='costumeAttr mr-3') Costume Cost is: 
+        div(class='costumegreen mr-3') Costume Cost is: 
         div #{costumecost} 
  
     button(class="btn btn-danger m-2" onclick="deleteOnid()") Delete 
