--- a/views/costumes.pug
+++ b/views/costumes.pug
@@ -2,16 +2,27 @@ extends layout
 
 block content
     h1= title
-    - var list = results 
+    - let items = results 
     table(class="table table-stripped table-bordered")
-        thead 
+        thead
             tr 
+                td Item ID
                 td Costume Type
                 td Size 
                 td Cost 
+                td Update
         tbody 
-            each item in list 
+            each item in items 
+                -let itemid=item._id
                 tr
+                    td #{item._id}
                     td #{item.costume_type}
                     td #{item.size}
                     td #{item.cost}
+                    td 
+                        button.btn( class="btn-primary ml-1", onclick= `dispatch(\"/costumes/update/?id=${item._id}\")` ) Update 
+
+                script. 
+                  function dispatch(path){ 
+                    window.location.href=path 
+                  }
