--- a/views/costumeupdate.pug
+++ b/views/costumeupdate.pug
@@ -2,10 +2,23 @@ extends layout
  
 block content 
   h1= title 
+  //- let items = results;
   - let costumeid = toShow._id 
   - let costume_type = toShow.costume_type 
   - let costumecost = toShow.cost 
   - let costumesize = toShow.size 
+
+  //- div(class="container-fluid")
+  //-  div(class="row m-1")
+  //-   each item in items
+  //-    -let destination = `dispatch(\"/costumes/update?id=${item._id}\")`
+  //-    div(class="row-sm-2", class="m-1") Item #{item.costume_type}(#{item.size}) is #{item.cost}
+  //-     button.btn( class="btn-primary ml-1", onclick= destination) Update
+
+  //-  script.
+  //-   function dispatch(path){
+  //-    window.location.href=path
+  //-   }
 
   div.row(class='mb-2') 
     div.mr-1 ID is 
