--- a/views/index.pug
+++ b/views/index.pug
@@ -1,19 +1,32 @@
-extends layout
+//- extends layout
 
+//- block content
+//-   h1= title
+//-   p I like icecreams the most.
+//-   button(type="button", class="btn btn-success", onclick="update()") Press Me
+//-   br
+//-   br
+//-   div(id = "target") 
+//-     b Display
+//-     br
+//-     br
+//-   a(href = '/balls') balls page.
+//-   script.  
+//-    var client_count=0;
+//-      function update() {
+//-        client_count++;
+//-        document.getElementById("target").innerHTML=`Value now ${client_count}`;
+//-      }
+
+
+extends layout
 block content
-  h1= title
-  p I like icecreams the most.
-  button(type="button", class="btn btn-success", onclick="update()") Press Me
+ if (!user)
+  a(href="/login") Login
   br
+  a(href="/register") Register
+ if (user)
+  p You are currently logged in as #{user.username}
+  a(href="/costumes") Take me to costumes
   br
-  div(id = "target") 
-    b Display
-    br
-    br
-  a(href = '/balls') balls page.
-  script.  
-   var client_count=0;
-     function update() {
-       client_count++;
-       document.getElementById("target").innerHTML=`Value now ${client_count}`;
-     }
+  a(href="/logout") Logout
